src/script/parse/xuparser.js
define ([], function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = "{",
        peg$c1 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c2 = "}",
        peg$c3 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c4 = function(pre, d) {
            d[1] = checkForUndeclaredEntities(d[1], d[2]);
            var lRetval = merge (d[0], merge (d[1], d[2]));
            
            lRetval = merge ({meta: getMetaInfo(d[0], d[2])}, lRetval);

            if (pre.length > 0) {
                lRetval = merge({precomment: pre}, lRetval);
            }


        /*
            if (post.length > 0) {
                lRetval = merge(lRetval, {postcomment:post});
            }
        */
            return lRetval;
        },
        peg$c5 = "msc",
        peg$c6 = { type: "literal", value: "msc", description: "\"msc\"" },
        peg$c7 = function(o) {return {options:o}},
        peg$c8 = function(e) {return {entities:e}},
        peg$c9 = function(a) {return {arcs:a}},
        peg$c10 = ",",
        peg$c11 = { type: "literal", value: ",", description: "\",\"" },
        peg$c12 = function(o) {return o},
        peg$c13 = ";",
        peg$c14 = { type: "literal", value: ";", description: "\";\"" },
        peg$c15 = function(options) {
          return optionArray2Object(options);
        },
        peg$c16 = "=",
        peg$c17 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c18 = function(n, s) {return s},
        peg$c19 = function(n, i) {return i.toString()},
        peg$c20 = function(n, b) {return b.toString()},
        peg$c21 = function(n, v) {
           var lOption = {};
           n = n.toLowerCase();
           if (n === "wordwraparcs"){
              lOption[n] = flattenBoolean(v);
           } else {
              lOption[n]=v;
           }
           return lOption;
        },
        peg$c22 = "hscale",
        peg$c23 = { type: "literal", value: "hscale", description: "\"hscale\"" },
        peg$c24 = "width",
        peg$c25 = { type: "literal", value: "width", description: "\"width\"" },
        peg$c26 = "arcgradient",
        peg$c27 = { type: "literal", value: "arcgradient", description: "\"arcgradient\"" },
        peg$c28 = "wordwraparcs",
        peg$c29 = { type: "literal", value: "wordwraparcs", description: "\"wordwraparcs\"" },
        peg$c30 = "watermark",
        peg$c31 = { type: "literal", value: "watermark", description: "\"watermark\"" },
        peg$c32 = function(e) {return e},
        peg$c33 = function(el) {
          el[0].push(el[1]);
          return el[0];
        },
        peg$c34 = { type: "other", description: "entity" },
        peg$c35 = "[",
        peg$c36 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c37 = "]",
        peg$c38 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c39 = function(i, a) {return a},
        peg$c40 = function(i, al) {
          var lOption = {};
          lOption["name"] = i;
          return merge (lOption, al);
        },
        peg$c41 = function(a) {return a},
        peg$c42 = function(a) {return [a]},
        peg$c43 = function(al) {
           al[0].push(al[1][0]);

           return al[0];
        },
        peg$c44 = function(a, al) {return al},
        peg$c45 = function(a, al) {
          return merge (a, al);
        },
        peg$c46 = function(kind) {return {kind:kind}},
        peg$c47 = function(from, kind, to) {return {kind: kind, from:from, to:to, location:location()}},
        peg$c48 = "*",
        peg$c49 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c50 = function(kind, to) {return {kind:kind, from: "*", to:to, location:location()}},
        peg$c51 = function(from, kind) {return {kind:kind, from: from, to:"*", location:location()}},
        peg$c52 = function(from, kind, to, al) {return al},
        peg$c53 = function(from, kind, to, al, arclist) {
            var lRetval = {kind: kind, from:from, to:to, location:location(), arcs:arclist};
            return merge (lRetval, al);
          },
        peg$c54 = "|||",
        peg$c55 = { type: "literal", value: "|||", description: "\"|||\"" },
        peg$c56 = "...",
        peg$c57 = { type: "literal", value: "...", description: "\"...\"" },
        peg$c58 = "---",
        peg$c59 = { type: "literal", value: "---", description: "\"---\"" },
        peg$c60 = function(kind) {return kind.toLowerCase()},
        peg$c61 = { type: "other", description: "bi-directional arrow" },
        peg$c62 = "--",
        peg$c63 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c64 = "<->",
        peg$c65 = { type: "literal", value: "<->", description: "\"<->\"" },
        peg$c66 = "==",
        peg$c67 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c68 = "<<=>>",
        peg$c69 = { type: "literal", value: "<<=>>", description: "\"<<=>>\"" },
        peg$c70 = "<=>",
        peg$c71 = { type: "literal", value: "<=>", description: "\"<=>\"" },
        peg$c72 = "..",
        peg$c73 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c74 = "<<>>",
        peg$c75 = { type: "literal", value: "<<>>", description: "\"<<>>\"" },
        peg$c76 = "::",
        peg$c77 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c78 = "<:>",
        peg$c79 = { type: "literal", value: "<:>", description: "\"<:>\"" },
        peg$c80 = { type: "other", description: "left to right arrow" },
        peg$c81 = "->",
        peg$c82 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c83 = "=>>",
        peg$c84 = { type: "literal", value: "=>>", description: "\"=>>\"" },
        peg$c85 = "=>",
        peg$c86 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c87 = ">>",
        peg$c88 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c89 = ":>",
        peg$c90 = { type: "literal", value: ":>", description: "\":>\"" },
        peg$c91 = "-x",
        peg$c92 = { type: "literal", value: "-x", description: "\"-x\"" },
        peg$c93 = { type: "other", description: "right to left arrow" },
        peg$c94 = "<-",
        peg$c95 = { type: "literal", value: "<-", description: "\"<-\"" },
        peg$c96 = "<<=",
        peg$c97 = { type: "literal", value: "<<=", description: "\"<<=\"" },
        peg$c98 = "<=",
        peg$c99 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c100 = "<<",
        peg$c101 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c102 = "<:",
        peg$c103 = { type: "literal", value: "<:", description: "\"<:\"" },
        peg$c104 = "x-",
        peg$c105 = { type: "literal", value: "x-", description: "\"x-\"" },
        peg$c106 = { type: "other", description: "box" },
        peg$c107 = "note",
        peg$c108 = { type: "literal", value: "note", description: "\"note\"" },
        peg$c109 = "abox",
        peg$c110 = { type: "literal", value: "abox", description: "\"abox\"" },
        peg$c111 = "rbox",
        peg$c112 = { type: "literal", value: "rbox", description: "\"rbox\"" },
        peg$c113 = "box",
        peg$c114 = { type: "literal", value: "box", description: "\"box\"" },
        peg$c115 = { type: "other", description: "arc spanning box" },
        peg$c116 = "alt",
        peg$c117 = { type: "literal", value: "alt", description: "\"alt\"" },
        peg$c118 = "else",
        peg$c119 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c120 = "opt",
        peg$c121 = { type: "literal", value: "opt", description: "\"opt\"" },
        peg$c122 = "break",
        peg$c123 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c124 = "par",
        peg$c125 = { type: "literal", value: "par", description: "\"par\"" },
        peg$c126 = "seq",
        peg$c127 = { type: "literal", value: "seq", description: "\"seq\"" },
        peg$c128 = "strict",
        peg$c129 = { type: "literal", value: "strict", description: "\"strict\"" },
        peg$c130 = "neg",
        peg$c131 = { type: "literal", value: "neg", description: "\"neg\"" },
        peg$c132 = "critical",
        peg$c133 = { type: "literal", value: "critical", description: "\"critical\"" },
        peg$c134 = "ignore",
        peg$c135 = { type: "literal", value: "ignore", description: "\"ignore\"" },
        peg$c136 = "consider",
        peg$c137 = { type: "literal", value: "consider", description: "\"consider\"" },
        peg$c138 = "assert",
        peg$c139 = { type: "literal", value: "assert", description: "\"assert\"" },
        peg$c140 = "loop",
        peg$c141 = { type: "literal", value: "loop", description: "\"loop\"" },
        peg$c142 = "ref",
        peg$c143 = { type: "literal", value: "ref", description: "\"ref\"" },
        peg$c144 = "exc",
        peg$c145 = { type: "literal", value: "exc", description: "\"exc\"" },
        peg$c146 = function(attributes) {
          return optionArray2Object(attributes);
        },
        peg$c147 = function(n, v) {
          var lAttribute = {};
          n = n.toLowerCase();
          n = n.replace("colour", "color");
          lAttribute[n] = v;
          return lAttribute
        },
        peg$c148 = { type: "other", description: "attribute name" },
        peg$c149 = "label",
        peg$c150 = { type: "literal", value: "label", description: "\"label\"" },
        peg$c151 = "idurl",
        peg$c152 = { type: "literal", value: "idurl", description: "\"idurl\"" },
        peg$c153 = "id",
        peg$c154 = { type: "literal", value: "id", description: "\"id\"" },
        peg$c155 = "url",
        peg$c156 = { type: "literal", value: "url", description: "\"url\"" },
        peg$c157 = "linecolor",
        peg$c158 = { type: "literal", value: "linecolor", description: "\"linecolor\"" },
        peg$c159 = "linecolour",
        peg$c160 = { type: "literal", value: "linecolour", description: "\"linecolour\"" },
        peg$c161 = "textcolor",
        peg$c162 = { type: "literal", value: "textcolor", description: "\"textcolor\"" },
        peg$c163 = "textcolour",
        peg$c164 = { type: "literal", value: "textcolour", description: "\"textcolour\"" },
        peg$c165 = "textbgcolor",
        peg$c166 = { type: "literal", value: "textbgcolor", description: "\"textbgcolor\"" },
        peg$c167 = "textbgcolour",
        peg$c168 = { type: "literal", value: "textbgcolour", description: "\"textbgcolour\"" },
        peg$c169 = "arclinecolor",
        peg$c170 = { type: "literal", value: "arclinecolor", description: "\"arclinecolor\"" },
        peg$c171 = "arclinecolour",
        peg$c172 = { type: "literal", value: "arclinecolour", description: "\"arclinecolour\"" },
        peg$c173 = "arctextcolor",
        peg$c174 = { type: "literal", value: "arctextcolor", description: "\"arctextcolor\"" },
        peg$c175 = "arctextcolour",
        peg$c176 = { type: "literal", value: "arctextcolour", description: "\"arctextcolour\"" },
        peg$c177 = "arctextbgcolor",
        peg$c178 = { type: "literal", value: "arctextbgcolor", description: "\"arctextbgcolor\"" },
        peg$c179 = "arctextbgcolour",
        peg$c180 = { type: "literal", value: "arctextbgcolour", description: "\"arctextbgcolour\"" },
        peg$c181 = "arcskip",
        peg$c182 = { type: "literal", value: "arcskip", description: "\"arcskip\"" },
        peg$c183 = "\"",
        peg$c184 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c185 = function(s) {return s.join("")},
        peg$c186 = "\\\"",
        peg$c187 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c188 = { type: "any", description: "any character" },
        peg$c189 = function(c) {return c},
        peg$c190 = { type: "other", description: "identifier" },
        peg$c191 = /^[A-Za-z_0-9]/,
        peg$c192 = { type: "class", value: "[A-Za-z_0-9]", description: "[A-Za-z_0-9]" },
        peg$c193 = function(letters) {return letters.join("")},
        peg$c194 = { type: "other", description: "whitespace" },
        peg$c195 = /^[ \t]/,
        peg$c196 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c197 = { type: "other", description: "lineend" },
        peg$c198 = /^[\r\n]/,
        peg$c199 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c200 = "/*",
        peg$c201 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c202 = "*/",
        peg$c203 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c204 = function(start, com, end) {
          return start + com.join("") + end
        },
        peg$c205 = "//",
        peg$c206 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c207 = "#",
        peg$c208 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c209 = /^[^\r\n]/,
        peg$c210 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c211 = function(start, com) {
          return start + com.join("")
        },
        peg$c212 = { type: "other", description: "comment" },
        peg$c213 = { type: "other", description: "integer" },
        peg$c214 = /^[0-9]/,
        peg$c215 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c216 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c217 = { type: "other", description: "real" },
        peg$c218 = ".",
        peg$c219 = { type: "literal", value: ".", description: "\".\"" },
        peg$c220 = function(digits) { return parseFloat(digits.join("")); },
        peg$c221 = { type: "other", description: "boolean" },
        peg$c222 = "true",
        peg$c223 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c224 = "false",
        peg$c225 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c226 = "on",
        peg$c227 = { type: "literal", value: "on", description: "\"on\"" },
        peg$c228 = "off",
        peg$c229 = { type: "literal", value: "off", description: "\"off\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestarttoken();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s4 = peg$c0;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsedeclarationlist();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s8 = peg$c2;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c3); }
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse_();
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c4(s1, s6);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestarttoken() {
      var s0;

      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c5) {
        s0 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parsedeclarationlist() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseoptionlist();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c7(s2);
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseentitylist();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c8(s3);
        }
        s2 = s3;
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parsearclist();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c9(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseoptionlist() {
      var s0, s1, s2, s3, s4, s5;
